// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label This is an error message
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error">
          <slot></slot>
        </div>
        <div class="gux-form-field-error gux-show" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-error gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-describedby="gux-error-i" aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
  <span id="gux-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label This is a help message
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-describedby="gux-help-i" aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
  <span id="gux-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when an optional "label-info" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label This is some tooltip text
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
  <gux-label-info-beta slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when indicator-mark is "optional" 1`] = `
<gux-form-field-dropdown indicator-mark="optional">
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="optional"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when indicator-mark is "required" 1`] = `
<gux-form-field-dropdown indicator-mark="required">
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when input attribute is "disabled" 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi disabled="">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup disabled="">
          <div class="gux-disabled gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" disabled="" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when input attribute is "required" 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label Required
      </legend>
      <div class="gux-above gux-form-field-visual-label gux-required" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator required="" variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi required="">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when label-position is above 1`] = `
<gux-form-field-dropdown label-position="above">
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when label-position is beside 1`] = `
<gux-form-field-dropdown label-position="beside">
  <template shadowrootmode="open">
    <fieldset class="gux-beside gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-beside gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when label-position is screenreader 1`] = `
<gux-form-field-dropdown label-position="screenreader">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-screenreader">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-screenreader" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
        <slot name="create"></slot>
      </template>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label This is an error message
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error">
          <slot></slot>
        </div>
        <div class="gux-form-field-error gux-show" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-error gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-describedby="gux-error-i" aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
  <span id="gux-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label This is a help message
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-describedby="gux-help-i" aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
  <span id="gux-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when an optional "label-info" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label This is some tooltip text
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
  <gux-label-info-beta slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when indicator-mark is "optional" 1`] = `
<gux-form-field-dropdown indicator-mark="optional">
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="optional"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when indicator-mark is "required" 1`] = `
<gux-form-field-dropdown indicator-mark="required">
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when input attribute is "disabled" 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown disabled="">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup disabled="">
        <div class="gux-disabled gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" disabled="" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when input attribute is "required" 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label Required
      </legend>
      <div class="gux-above gux-form-field-visual-label gux-required" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator required="" variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown required="">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when label-position is above 1`] = `
<gux-form-field-dropdown label-position="above">
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when label-position is beside 1`] = `
<gux-form-field-dropdown label-position="beside">
  <template shadowrootmode="open">
    <fieldset class="gux-beside gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-beside gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when label-position is screenreader 1`] = `
<gux-form-field-dropdown label-position="screenreader">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-screenreader">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-screenreader" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="custom/chevron-down-small-regular" screenreader-text="Dropdown" size="small"></gux-icon>
          </button>
        </div>
        <slot slot="popup"></slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot></slot>
      </template>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot></slot>
            </gux-truncate>
            <slot name="subtext"></slot>
          </div>
        </template>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Label
  </label>
</gux-form-field-dropdown>
`;
